# Ledger

./: .gitignore  ARCHITECTURE.md  FEATURES.md  MODERATION.md  README.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  vite.config.ts
.codesight/: CODESIGHT.md  cicd.md  components.md  config.md  events.md  graph.md  libs.md  middleware.md  routes.md
.github/workflows/: deploy.yml
assets/: index-BkWHxDUn.js
public/: manifest.webmanifest  support.html  sw.js
scripts/: build-wasm.mjs  gen-icons.mjs
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  render.yaml
server/src/: config.js  dashboard.js  identity.js  index.js  publisher.js  routes.js
src/: App.tsx  bliss.css  main.tsx
src/lib/: authorBlock.test.ts  authorBlock.ts  diag.ts  embeddings.test.ts  embeddings.ts  emoticons.ts  events.ts  factMatch.test.ts  factMatch.ts  feedRank.ts  image.ts  moderationCore.ts  ping.ts  pwa.ts  records.ts  textModeration.ts  trustMath.ts  unloadGuard.ts  useChatScroll.ts  watchGuard.ts
src/services/: audioPlayerService.ts  changelogService.ts  chatMedia.ts  chatroomService.ts  communityService.ts  companionService.ts  deviceTransferService.ts  factCheckService.ts  feedService.ts  geoService.ts  gifService.ts  globalChatService.ts  gunService.ts  identityService.ts  index.ts  linkPreviewService.ts  listenTogetherService.ts  llm.worker.ts  marketplaceService.ts  moderationService.ts  nostrService.ts  nsfwService.ts  peerService.ts  presenceService.ts  (+10 more)
wasm/: Cargo.toml
wasm/src/: lib.rs
(+62 files in other folders)
